logs/test-amd64-fix-32.txt
AS  kernel/arch/amd64/boot/start.S
AS  kernel/arch/amd64/cpu/isr_stubs.S
AS  kernel/arch/amd64/cpu/syscall.S
AS  kernel/arch/amd64/cpu/context.S
AS  kernel/arch/amd64/boot/trampoline.S
CC  kernel/arch/amd64/cpu/cpu.c
CC  kernel/arch/amd64/cpu/idt.c
CC  kernel/arch/amd64/cpu/gdt.c
CC  kernel/arch/amd64/cpu/msr.c
CC  kernel/arch/amd64/cpu/apic.c
/var/folders/tq/_vyjv8rj0gq0rjq6f_cxw4vw0000gn/T//cc2C334E.s: Assembler messages:
kernel/arch/amd64/cpu/apic.c:19: Warning: 0x3f8 shortened to 0xf8
CC  kernel/arch/amd64/mm/mmu.c
CC  kernel/arch/amd64/mm/uaccess.c
CC  kernel/drivers/uart/16550.c
CC  kernel/drivers/timer/pic_pit.c
CC  kernel/arch/amd64/platform/platform.c
CC  kernel/arch/amd64/hal.c
kernel/arch/amd64/hal.c:78:6: error: no previous prototype for 'timer_init_percpu' [-Werror=missing-prototypes]
   78 | void timer_init_percpu(void) {
      |      ^~~~~~~~~~~~~~~~~
kernel/arch/amd64/hal.c: In function 'timer_init_percpu':
kernel/arch/amd64/hal.c:80:22: error: 'HZ' undeclared (first use in this function)
   80 |     lapic_timer_init(HZ);
      |                      ^~
kernel/arch/amd64/hal.c:80:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
make: *** [build/amd64/kernel/arch/amd64/hal.o] Error 1
